break core tier-list out

--- a/src/app/league-zone/league-tier-list/league-tier-list.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.html
@@ -1,82 +1,7 @@
-@if (tierGroups) {
-  <div class="tier-container">
-    <div class="h-fit w-full flex">
-      @for (group of tierGroups; track $index) {
-        <div class="tier-group">
-          @if (group.label !== undefined) {
-            <div class="tier-group-label">{{ group.label }}</div>
-          }
-          <div class="tier-entry-container">
-            @for (tier of group.tiers; track $index) {
-              <div class="tier">
-                <div class="tier-label">
-                  {{ tier.name }}
-                </div>
-                @for (pokemon of tier.pokemon; track $index) {
-                  @if (typeInFilter(pokemon)) {
-                    <div
-                      class="tier-entry"
-                      [ngClass]="{
-                        drafted:
-                          selectedDivision.value &&
-                          pokemon.drafted?.includes(selectedDivision.value),
-                        selected: selectedPokemon === pokemon,
-                      }"
-                      (click)="selectPokemon(pokemon, tier.name, $event)"
-                    >
-                      <div class="entry-sprite">
-                        <pdz-sprite
-                          [pid]="pokemon.id"
-                          [tooltipPosition]="null"
-                        ></pdz-sprite>
-                      </div>
-                      <div class="entry-name">
-                        {{ pokemon.name }}
-                      </div>
-                      @if (pokemon.banned) {
-                        <mat-icon
-                          class="restricted-icon"
-                          mat-raised-button
-                          #tooltip="matTooltip"
-                          [matTooltip]="makeBanString(pokemon.banned)"
-                        >
-                          warning
-                        </mat-icon>
-                      }
-                    </div>
-                  }
-                }
-              </div>
-            }
-          </div>
-        </div>
-      }
-    </div>
-  </div>
-} @else {
-  <loading></loading>
-}
-
-@if (selectedPokemon) {
-  <div
-    class="selected-card"
-    [style.top]="cardPosition.top"
-    [style.left]="cardPosition.left"
-  >
-    {{ selectedPokemon.name }}
-    <pdz-sprite
-      [pokemon]="selectedPokemon"
-      [tooltipPosition]="null"
-    ></pdz-sprite>
-    <div class="type-container">
-      @for (type of selectedPokemon.types; track $index) {
-        <div class="type-label" [style.background-color]="typeColor(type)">
-          <div class="type-text">
-            {{ type }}
-          </div>
-        </div>
-      }
-    </div>
-    <button (click)="emitDraftPokemon()">Draft</button>
-  </div>
-}
+<pdz-tier-list-core
+  [tierGroups]="tierListService.sortedTierGroups()"
+  [isDrafted]="tierListService.isDrafted.bind(tierListService)"
+  [typeInFilter]="tierListService.typeInFilter.bind(tierListService)"
+  [makeBanString]="tierListService.makeBanString.bind(tierListService)"
+  (draftPokemon)="draftPokemon.emit($event)"
+></pdz-tier-list-core>
