--- a/src/app/league-zone/league-drafting/league-drafting.component.scss
+++ b/src/app/league-zone/league-drafting/league-drafting.component.scss
@@ -149,7 +149,6 @@
   > button,
   > div {
     width: 100%;
-    overflow: hidden;
     border-radius: 0.5rem;
   }
 
@@ -250,17 +249,21 @@
     .my-draft-title {
       display: flex;
       justify-content: space-between;
+      width: 100%;
+      span {
+        flex-grow: 1;
+      }
     }
 
     .my-draft-pokemons {
-      padding: 0.5rem 1rem;
+      padding: 0.5rem 0.5rem;
       height: calc(100% - 2rem);
       overflow-y: scroll;
       list-style: none;
       .my-draft-pokemon {
         counter-increment: item;
         display: flex;
-        align-items: center;
+        align-items: stretch;
         padding: 0.125rem 0;
         column-gap: 0.25rem;
         &:not(:last-child) {
@@ -272,9 +275,16 @@
         }
         .my-pokemon-index {
           color: var(--mat-sys-primary);
-          width: 1.25rem;
+          width: 1.5rem;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 1rem;
           text-align: center;
-          margin-left: -0.75rem;
+          &.selected-pick {
+            background-color: var(--mat-sys-primary);
+            color: var(--mat-sys-on-primary);
+          }
         }
         .my-pokemon-name,
         .my-pokemon-tier {
@@ -379,5 +389,57 @@
         }
       }
     }
+  }
+}
+
+.my-pick {
+  cursor: pointer;
+}
+
+.skip-time {
+  font-size: 1.5rem;
+  font-family: var(--pdz-font-fancy);
+  font-weight: bold;
+}
+
+.league-header {
+  font-size: 1.25rem;
+  font-family: var(--pdz-font-fancy);
+  font-weight: bold;
+  overflow: hidden;
+}
+
+.custom-dropdown-container {
+  position: relative;
+  display: flex;
+  width: 100%; // Ensure it takes the full width of its parent
+}
+
+.custom-dropdown-menu {
+  position: absolute;
+  top: 100%; // Position it right below the button
+  left: 0;
+  width: 100%; // Match the width of the button
+  max-height: 200px; // Set a max height
+  overflow-y: auto; // Enable scrolling
+  background-color: var(--mat-sys-surface); // Use a suitable background color
+  border: 1px solid var(--mat-sys-outline); // Add a border
+  border-radius: 0.5rem;
+  box-shadow: var(--mat-sys-level2);
+  z-index: 1000; // Ensure it appears above other content
+}
+
+.custom-dropdown-item {
+  display: block;
+  width: 100%;
+  padding: 0.5rem 1rem;
+  text-align: left;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: var(--mat-sys-on-surface);
+
+  &:hover {
+    background-color: var(--mat-sys-surface-container-highest);
   }
 }
