--- a/src/app/league-zone/league-tier-list/league-tier-list.component.html
+++ b/src/app/league-zone/league-tier-list/league-tier-list.component.html
@@ -1,10 +1,10 @@
 <div class="flex flex-col max-w-full h-full items-center">
-  <div class="h-full flex max-w-full flex-col p-2 space-y-2">
+  <div class="h-full flex max-w-full flex-col space-y-2">
     <div class="flex-grow-0 max-w-full flex justify-between">
       <div class="flex items-center space-x-2">
         <div class="md:text-2xl text-xl font-nasa">Tier List</div>
         @if (tierListService.sortedTierGroups()) {
-          <div>
+          <div class="flex items-center">
             <div class="relative inline-block">
               <button
                 mat-icon-button
@@ -108,6 +108,11 @@
                 }
               </div>
             }
+            <div class="inline-block">
+              <mat-checkbox [(ngModel)]="showDrafted"
+                >Show Drafted</mat-checkbox
+              >
+            </div>
           </div>
         }
       </div>
@@ -130,11 +135,16 @@
                         {{ tier.name }}
                       </div>
                       @for (pokemon of tier.pokemon; track $index) {
-                        @if (typeInFilter(pokemon)) {
+                        @if (
+                          typeInFilter(pokemon) &&
+                          (showDrafted || !isPokemonDrafted(pokemon))
+                        ) {
                           <div
                             class="tier-entry"
                             [ngClass]="{
-                              drafted: isPokemonDrafted(pokemon.id),
+                              drafted:
+                                isPokemonDrafted(pokemon) ||
+                                tier.name === 'Ban',
                               selected: selectedPokemon === pokemon,
                             }"
                             (click)="selectPokemon(pokemon, tier.name, $event)"
@@ -178,7 +188,9 @@
           [style.top]="cardPosition.top"
           [style.left]="cardPosition.left"
         >
-          {{ selectedPokemon.name }}
+          <div class="card-pokemon-name">
+            {{ selectedPokemon.name }}
+          </div>
           <pdz-sprite
             [pokemon]="selectedPokemon"
             [tooltipPosition]="null"
@@ -195,7 +207,29 @@
               </div>
             }
           </div>
-          <button (click)="emitDraftPokemon()">Draft</button>
+          <div class="stats-container">
+            @for (stat of pokemonStats; track $index) {
+              <div class="stat-container">
+                <div class="stat-name">
+                  {{ stat[0] | uppercase }}
+                </div>
+                <div class="stat-value">
+                  {{ stat[1] }}
+                </div>
+              </div>
+            }
+          </div>
+          @if (buttonText) {
+            <button
+              [disabled]="
+                isPokemonDrafted(selectedPokemon) ||
+                selectedPokemon.tier == 'Ban'
+              "
+              (click)="emitDraftPokemon()"
+            >
+              {{ buttonText }}
+            </button>
+          }
         </div>
       }
     </div>
