--- a/src/app/league-zone/league-drafting/league-drafting.component.html
+++ b/src/app/league-zone/league-drafting/league-drafting.component.html
@@ -1,7 +1,8 @@
 <div class="main-league-container">
   <div class="draft-panel">
     <div class="info-container">
-      <div class="league-header">Pokemon Draft League S2</div>
+      <div class="league-name">{{ leagueName }}</div>
+      <div class="division-name">Division: {{ divisionName }}</div>
     </div>
     <button class="planner-link fancy-font">
       Planner <mat-icon>open_in_new</mat-icon>
@@ -100,9 +101,10 @@
       <div class="draft-section-title">Draft Order</div>
       <div class="draft-rounds draft-section-body">
         @for (round of draftOrder; track $index) {
+          @let roundIndex = $index;
           <div class="draft-round-container">
             <div class="round-label">
-              <span>Round {{ $index + 1 }}</span>
+              <span>Round {{ roundIndex + 1 }}</span>
               <mat-icon>trending_flat</mat-icon>
             </div>
             <div class="card-container">
@@ -142,7 +144,10 @@
                     <div class="team-card-name">
                       @if (position.pokemon?.name) {
                         {{ position.pokemon!.name }}
-                      } @else if (position.skipTime) {
+                      } @else if (
+                        currentPick.round === roundIndex &&
+                        currentPick.position === $index
+                      ) {
                         Picking
                       } @else {
                         Upcoming
@@ -158,12 +163,8 @@
     </div>
     <div class="tier-wrapper">
       <pdz-league-tier-list
-        [buttonText]="
-          'Add to Picks \(' +
-          (selectedPick + selectedTeam.draft.length + 1) +
-          '\)'
-        "
-        (pokemonSelected)="addChoice($event)"
+        [buttonText]="buttonText()"
+        (pokemonSelected)="pokemonSelected($event)"
       ></pdz-league-tier-list>
     </div>
   </div>
