--- a/src/app/league-zone/league-drafting/league-drafting.component.scss
+++ b/src/app/league-zone/league-drafting/league-drafting.component.scss
@@ -402,10 +402,15 @@
   font-weight: bold;
 }
 
-.league-header {
-  font-size: 1.25rem;
+.league-name {
+  font-size: 1.1rem;
   font-family: var(--pdz-font-fancy);
   font-weight: bold;
+  overflow: hidden;
+}
+.division-name {
+  font-size: 0.85rem;
+  font-family: var(--pdz-font-fancy);
   overflow: hidden;
 }
 
@@ -413,6 +418,12 @@
   position: relative;
   display: flex;
   width: 100%; // Ensure it takes the full width of its parent
+  border-radius: 1rem;
+  margin-bottom: 2px;
+  &:hover {
+    background-color: var(--mat-sys-surface);
+    box-shadow: var(--pdz-level1);
+  }
 }
 
 .custom-dropdown-menu {
